--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: jetson
 description: Object mapping and serialization core for JetLeaf — provides JSON, model binding, and conversion utilities.
-version: 1.0.0
+version: 1.0.0+1
 
 homepage: https://jetleaf.hapnium.com
 repository: https://github.com/jetleaf/jetson
@@ -28,7 +28,7 @@ dependencies:
   meta: ^1.17.0
   jetleaf_lang: ^1.0.1
   jetleaf_convert: ^1.0.1
-  jetleaf_core: ^1.0.1
+  jetleaf_core: ^1.0.1+1
   jetleaf_utils: ^1.0.1
   jetleaf_env: ^1.0.1
 
